Refine popup background, outline, and elevation styles

--- a/special-pages/pages/new-tab/app/omnibar/components/Omnibar.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/Omnibar.module.css
@@ -41,36 +41,31 @@
     }
 }
 
+/* Rest */
 .popup {
     background: var(--ntp-surface-tertiary);
     border-radius: 12px;
-    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.08);
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.1), 0 4px 8px 0 rgba(0, 0, 0, 0.08); /* Elevation 30 */
     display: flow-root; /* Prevent margin collapse on .field */
     margin: 3px;
+    outline: 1px solid var(--ntp-controls-raised-backdrop);
 
     body:not([data-background-kind="default"]) & {
         backdrop-filter: blur(48px);
         background: var(--omnibar-translucent-background-color);
-        outline: 1px solid var(--ntp-surface-border-color);
     }
 }
 
-.field {
-    box-sizing: content-box;
-    overflow: hidden;
-    position: relative;
-    transition: height 200ms ease;
-
-    @media (prefers-reduced-motion: reduce) {
-        transition: none;
-    }
+/* Typing */
+.root:focus-within .popup {
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.1), 0 20px 40px 0 rgba(0, 0, 0, 0.08); /* Elevation 90 */
 }
 
 /* Focused */
 .root:focus-within:has(input:placeholder-shown, textarea:placeholder-shown) .popup {
     border-radius: 15px;
     border: 2px solid var(--ntp-accent-primary);
-    box-shadow: none;
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.1), 0 20px 40px 0 rgba(0, 0, 0, 0.08); /* Elevation 90 */
     margin: 0;
     outline: 2px solid var(--ntp-accent-glow);
 
@@ -82,10 +77,20 @@
 /* Suggestions */
 .root:has([role="listbox"]) .popup {
     border-radius: 15px;
-    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.1), 0 20px 40px 0 rgba(0, 0, 0, 0.08);
     margin: 0;
 
     .field {
         margin: 3px; /* Use margin on .field instead of padding on .popup so that position: absolute respects the spacing */
+    }
+}
+
+.field {
+    box-sizing: content-box;
+    overflow: hidden;
+    position: relative;
+    transition: height 200ms ease;
+
+    @media (prefers-reduced-motion: reduce) {
+        transition: none;
     }
 }
