--- a/special-pages/pages/new-tab/app/components/Popover.module.css
+++ b/special-pages/pages/new-tab/app/components/Popover.module.css
@@ -46,6 +46,24 @@
     }
 }
 
+.heading {
+    display: flex;
+    flex-direction: column;
+    gap: var(--sp-1);
+}
+
+.badge {
+    background: var(--color-yellow-60);
+    border-radius: var(--border-radius-xs);
+    color: var(--color-black);
+    font-size: 11.5px;
+    font-weight: 600;
+    line-height: var(--sp-4);
+    padding: 0 var(--sp-2);
+    text-transform: uppercase;
+    width: fit-content;
+}
+
 .title {
     font-size: var(--title-3-em-font-size);
     font-weight: var(--title-3-em-font-weight);
