Fix shadow rendering issue in popover when mousing over Customize link

--- a/special-pages/pages/new-tab/app/components/Popover.module.css
+++ b/special-pages/pages/new-tab/app/components/Popover.module.css
@@ -77,6 +77,7 @@
         color: var(--ntp-accent-primary);
         cursor: pointer;
         padding: 0;
+        transform: translateZ(0); /* Fix shadow rendering issue on .popover in WebKit */
 
         &:hover {
             color: var(--ntp-accent-secondary);
