--- a/special-pages/pages/new-tab/app/omnibar/components/AiChatForm.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/AiChatForm.module.css
@@ -11,6 +11,7 @@
     border: none;
     box-sizing: content-box;
     color: var(--ntp-text-primary);
+    line-height: 16px;
     max-height: 10lh;
     padding: var(--sp-3) var(--sp-3) 0;
     resize: none;
