jingram/subscription win back banner: Adds Subscription Win-Back Banner (#2014)
* Move utility functions to shared file and update unit tests

Remove freemium dir from test-unit script

* Messaging support for the subscription win-back banner

* Create win-back banner component and supporting files

Include supporting svg

* Wire up mock transport

* Generate types

* Wire up integration test for win-back banner on NTP

* Update button styles

* Update new-tab readme

* Add entry point for Subscription Win-back banner

* Resolve Unknown property `composes`

* Resolve Unexpected unknown property "composes"  property-no-unknown

* Fix unit test issue

* Patch: Update test-int-snapshots-update in injected/package.json

* Use accentBrand colors for MacOS button

* Update test to pass the correct query param value

--- a/special-pages/shared/components/Button/Button.module.css
+++ b/special-pages/shared/components/Button/Button.module.css
@@ -295,6 +295,7 @@ body:not([data-platform-name]) {
             }
         }
 
+        &.accent,
         &.accentBrand {
             background-color: var(--ddg-color-primary);
             color: var(--color-white);
@@ -333,6 +334,7 @@ body:not([data-platform-name]) {
                 }
             }
 
+            &.accent,
             &.accentBrand {
                 color: var(--color-black-at-84);
                 background-color: var(--color-blue-20);
