--- a/special-pages/pages/history/app/components/Sidebar.module.css
+++ b/special-pages/pages/history/app/components/Sidebar.module.css
@@ -39,6 +39,23 @@
             background: var(--color-white-at-6);
         }
     }
+
+    &:last-child {
+        margin-top: 16px;
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: -8px;
+            left: 16px;
+            right: 16px;
+            border-top: 1px solid var(--color-black-at-6);
+        }
+
+        [data-theme="dark"] &::before {
+            border-top: 1px solid var(--color-white-at-6);
+        }
+    }
 }
 
 .item:hover .delete[aria-disabled="true"] {
