NTP - Fix text cut-off on windows (#2029)
* Set line-height to normal -- this fixes cut-off issue on windows, but does not change anything on mac os

* Target windows only

* use data-platform for naming consistency

--- a/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/SearchForm.module.css
@@ -21,7 +21,7 @@
         color: var(--ntp-text-tertiary);
     }
 
-    [data-platform="windows"] &::selection {
+    [data-platform='windows'] &::selection {
         background: var(--ntp-selection-background-color);
         color: var(--ntp-selection-color);
     }
@@ -78,7 +78,13 @@
         visibility: visible;
     }
 
-    [data-entry-point="omnibar"]:has([role="listbox"]) & {
+    [data-entry-point='omnibar']:has([role='listbox']) & {
         visibility: visible;
     }
+}
+
+[data-platform='windows'] {
+	.input {
+		line-height: normal;
+	}
 }
