--- a/special-pages/shared/styles/variables.css
+++ b/special-pages/shared/styles/variables.css
@@ -90,6 +90,7 @@
     --color-black-at-48: rgba(0, 0, 0, 0.48);
     --color-black-at-50: rgba(0, 0, 0, 0.5);
     --color-black-at-60: rgba(0, 0, 0, 0.6);
+    --color-black-at-66: rgba(0, 0, 0, 0.66);
     --color-black-at-72: rgba(0, 0, 0, 0.72);
     --color-black-at-80: rgba(0, 0, 0, 0.8);
     --color-black-at-84: rgba(0, 0, 0, 0.84);
@@ -110,6 +111,7 @@
     --color-white-at-42: rgba(255, 255, 255, 0.42);
     --color-white-at-50: rgba(255, 255, 255, 0.5);
     --color-white-at-60: rgba(255, 255, 255, 0.6);
+    --color-white-at-66: rgba(255, 255, 255, 0.66);
     --color-white-at-70: rgba(255, 255, 255, 0.7);
     --color-white-at-80: rgba(255, 255, 255, 0.8);
     --color-white-at-84: rgba(255, 255, 255, 0.84);
