--- a/special-pages/pages/new-tab/app/activity/components/Activity.module.css
+++ b/special-pages/pages/new-tab/app/activity/components/Activity.module.css
@@ -77,9 +77,7 @@
     background: var(--color-black-at-12);
     transition: transform .2s;
 
-    border: 0.5px solid rgba(0, 0, 0, 0.09);
     background: rgba(255, 255, 255, 0.30);
-    box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.12), 0px 0px 1.5px 0px rgba(0, 0, 0, 0.16);
 
     [data-theme="dark"] & {
         border: 0.5px solid rgba(255, 255, 255, 0.09);
@@ -198,18 +196,14 @@
     padding-left: 1px; /* visual alignment */
 }
 
-.companiesIcons {
-    display: flex;
-    gap: 3px;
-    > * {
-        flex-shrink: 0;
-        min-width: 0;
-    }
+.companiesText {
+  & div:first-of-type {
+    margin-bottom: 6px;
+  }
 }
-.companiesText {}
 
 .history {
-    margin-top: 10px;
+    margin-top: 8px;
 }
 .historyItem {
     display: flex;
