--- a/special-pages/pages/new-tab/app/components/Tooltip/Tooltip.module.css
+++ b/special-pages/pages/new-tab/app/components/Tooltip/Tooltip.module.css
@@ -2,6 +2,13 @@
     position: relative;
     display: inline-flex;
     align-items: center;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.tooltipContainer:focus-visible {
+    outline: 2px solid var(--color-blue-50);
+    outline-offset: 2px;
 }
 
 .tooltip {
