--- a/special-pages/pages/new-tab/app/protections/components/Protections.module.css
+++ b/special-pages/pages/new-tab/app/protections/components/Protections.module.css
@@ -47,6 +47,7 @@
     margin-top: 32px;
 }
 
+/* @todo legacyProtections: Remove once all platforms support the new UI */
 .blockLegacy {
     margin-top: 24px;
 }
