--- a/special-pages/pages/new-tab/app/components/Icons.module.css
+++ b/special-pages/pages/new-tab/app/components/Icons.module.css
@@ -18,4 +18,18 @@
     }
 }
 
+/* InfoIcon styles */
+:global(.info-icon-fill) {
+    fill: black;
+    fill-opacity: 0.36;
+}
 
+[data-theme=dark] :global(.info-icon-fill) {
+    fill: white;
+    fill-opacity: 0.24;
+}
+
+/* FireIcon styles */
+.fireIcon {
+    color: currentColor;
+}
