--- a/special-pages/pages/new-tab/app/styles/ntp-theme.css
+++ b/special-pages/pages/new-tab/app/styles/ntp-theme.css
@@ -42,6 +42,42 @@ body {
     --default-dark-background-color: var(--color-gray-85);
 }
 
+/* TODO: Use colour variables from design-tokens */
+
+body[data-theme-variant="coolGray"] {
+    --default-light-background-color: #d2d5e3;
+    --default-dark-background-color: #2b2f45;
+}
+
+body[data-theme-variant="slateBlue"] {
+    --default-light-background-color: #d2e5f3;
+    --default-dark-background-color: #1e3347;
+}
+
+body[data-theme-variant="green"] {
+    --default-light-background-color: #e3eee1;
+    --default-dark-background-color: #203b30;
+}
+
+body[data-theme-variant="violet"] {
+    --default-light-background-color: #e7e4f5;
+    --default-dark-background-color: #2e2158;
+}
+
+body[data-theme-variant="rose"] {
+    --default-light-background-color: #f8ebf5;
+    --default-dark-background-color: #5b194b;
+}
+
+body[data-theme-variant="orange"] {
+    --default-light-background-color: #fcedd8;
+    --default-dark-background-color: #54240c;
+}
+
+body[data-theme-variant="desert"] {
+    --default-light-background-color: #eee9e1;
+    --default-dark-background-color: #3c3833;
+}
 
 [data-theme=light] {
     --ntp-surface-background-color: var(--color-white-at-30);
