Add ThemeProvider and theme variant support

--- a/special-pages/pages/history/styles/history-theme.css
+++ b/special-pages/pages/history/styles/history-theme.css
@@ -68,3 +68,40 @@ body {
     --history-text-invert: var(--color-black-at-84);
     --history-text-muted: var(--color-white-at-60);
 }
+
+/* TODO: Use colour variables from design-tokens */
+
+[data-theme-variant="coolGray"] {
+    --default-light-background-color: #d2d5e3;
+    --default-dark-background-color: #2b2f45;
+}
+
+[data-theme-variant="slateBlue"] {
+    --default-light-background-color: #d2e5f3;
+    --default-dark-background-color: #1e3347;
+}
+
+[data-theme-variant="green"] {
+    --default-light-background-color: #e3eee1;
+    --default-dark-background-color: #203b30;
+}
+
+[data-theme-variant="violet"] {
+    --default-light-background-color: #e7e4f5;
+    --default-dark-background-color: #2e2158;
+}
+
+[data-theme-variant="rose"] {
+    --default-light-background-color: #f8ebf5;
+    --default-dark-background-color: #5b194b;
+}
+
+[data-theme-variant="orange"] {
+    --default-light-background-color: #fcedd8;
+    --default-dark-background-color: #54240c;
+}
+
+[data-theme-variant="desert"] {
+    --default-light-background-color: #eee9e1;
+    --default-dark-background-color: #3c3833;
+}
