--- a/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
+++ b/special-pages/pages/new-tab/app/privacy-stats/components/PrivacyStats.module.css
@@ -86,7 +86,7 @@
 }
 
 .title {
-    color: var(--ntp-text-primary);
+    color: var(--ds-color-text-primary);
     font-size: 40px;
     font-weight: 400;
     grid-area: title;
