--- a/special-pages/pages/new-tab/app/omnibar/components/SuggestionsList.module.css
+++ b/special-pages/pages/new-tab/app/omnibar/components/SuggestionsList.module.css
@@ -21,7 +21,7 @@
     background: none;
     border-radius: 4px;
     border: none;
-    color: var(--ntp-text-primary);
+    color: var(--ds-color-text-primary);
     cursor: pointer;
     display: flex;
     height: var(--sp-8);
@@ -35,10 +35,10 @@
 
     &[aria-selected="true"],
     &:active {
-        color: var(--ntp-accent-content-primary);
+        color: var(--ds-color-accent-content-primary);
 
         .suffix {
-            color: var(--ntp-accent-content-primary);
+            color: var(--ds-color-accent-content-primary);
         }
 
         .badge {
@@ -47,11 +47,11 @@
     }
 
     &[aria-selected="true"] {
-        background: var(--ntp-accent-primary);
+        background: var(--ds-color-accent-primary);
     }
 
     &:active {
-        background: var(--ntp-accent-secondary);
+        background: var(--ds-color-accent-secondary);
     }
 }
 
@@ -64,7 +64,7 @@
 }
 
 .suffix {
-    color: var(--ntp-text-tertiary);
+    color: var(--ds-color-text-tertiary);
     flex: initial;
     font-size: 12px;
     overflow: hidden;
@@ -74,7 +74,7 @@
 
 .badge {
     align-items: center;
-    background: var(--ntp-controls-raised-backdrop);
+    background: var(--ds-color-control-raised-backdrop);
     border-radius: var(--border-radius-sm);
     display: flex;
     flex: none;
